[package]
name = "yellowstone-grpc-kafka"
version = "1.0.0+solana.1.18.23"
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc-kafka"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false

[[bin]]
name = "grpc-kafka"
required-features = ["kafka"]

[dependencies]
anyhow = "1.0.62"
async-trait = { version = "0.1.73", optional = true }
clap = { version = "4.3.0", features = ["derive"], optional = true }
const-hex = { version = "1.6.2", optional = true }
futures = "0.3.24"
hyper = { version = "0.14.27", optional = true }
json5 = "0.4.1"
lazy_static = { version = "1.4.0", optional = true }
prometheus = { version = "0.13.2", optional = true }
serde = "1.0.145"
serde_json = "1.0.86"
serde_yaml = "0.9.25"
sha2 = { version = "0.10.7", optional = true }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs", "signal", "time", "macros"] }
tokio-stream = { version = "0.1.11", optional = true }
tonic = { version = "0.10.2", features = ["gzip"], optional = true }
tonic-health = { version = "0.10.2", optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
yellowstone-grpc-client = { version = "1.15.4", optional = true }
yellowstone-grpc-proto = "1.14.2"
solana-account-decoder = "=1.18.23"
solana-transaction-status = "=1.18.23"
solana-sdk = "=1.18.23"

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
rdkafka = { version = "0.34.0", features = ["sasl", "ssl"], optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
rdkafka = { version = "0.34.0", features = ["sasl", "ssl-vendored"], optional = true }

[build-dependencies]
anyhow = "1.0.62"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "8.2.1", features = ["build", "rustc"] }

[features]
default = ["kafka"]
kafka = ["metrics", "async-trait", "clap", "const-hex", "rdkafka", "sha2", "tokio-stream", "tonic", "tonic-health", "yellowstone-grpc-client"]
metrics = ["hyper", "lazy_static", "prometheus", "tracing"]

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
